页面转换，css3完善

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="p1_words">献给最特殊的你</div>
 </div>
 <div class="page" id="page2">
+    <div class="bg p2_bg_loading"></div>
     <div class="bg"></div>
     <div class="p2_circle"></div>
     <div class="p2_2017"></div>
